[tool.poetry]
name = "video_utils"
version = "2.0.4"
description = "This library is used for lots of shared functionality around parsing TV shows and movies"
authors = ["Justin Dray <justin@dray.be>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.0"
pymediainfo = "^4.1"
tqdm = "^4.40.2"
ffmpy = "^0.2.2"

[tool.poetry.dev-dependencies]
coverage = "^5.0"
mock = "^3.0.5"
pytest = "^5.3"
flake8 = "^3.7"
autopep8 = "^1.4"
pylint = "^2.4.4"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
