[tool.poetry]
name = "video_utils"
version = "2.2.4"
description = "This library is used for lots of shared functionality around parsing TV shows and movies"
authors = ["Justin Dray <justin@dray.be>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.dependencies]
python = "^3.8.1"
colorama = "^0.4.6"
pymediainfo = "^6.0.1"
tqdm = "^4.65.0"
ffmpy = "^0.3.0"

[tool.poetry.dev-dependencies]
coverage = "^7.2.5"
mock = "^5.0.2"
pytest = "^7.3.1"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
