[project]
name = "video_utils"
version = "2.4.5"
description = "This library provides utilities for dealing folders full of video files, including parsing out all metadata and intelligent caching."
authors = [{ name = "Justin Dray", email = "justin@dray.be" }]
requires-python = ">=3.12.0,<4"
readme = "README.md"
license = "MIT"

dependencies = [
    "colorama>=0.4.6,<0.5",
    "pymediainfo>=7.0.0,<8",
    "ffmpy>=0.6.0,<0.7",
    "rich>=13.0.0,<15",
    "iso639>=0.1.4",
]

[dependency-groups]
dev = [
    "coverage>=7.2.5,<8",
    "mock>=5.0.2,<6",
    "pytest>=7.3.1,<8",
    "flake8>=6.0.0,<7",
    "pytest-cov>=4.0.0,<5",
    "ruff>=0.12.2",
    "ipython>=9.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
